# agents-patterns

./: .env.example  .gitignore  README.md  pyproject.toml
examples/01_agent2agent/: README.md  financial_analyst_a2a.py  fred_server.py  sec_edgar_server.py
examples/02_agents_as_tools/: README.md  market_research_orchestrator.py  specialists.py
examples/03_swarm/: README.md  investment_research_swarm.py  swarm_agents.py
examples/04_workflow/: README.md  company_analysis_workflow.py  workflow_tasks.py
examples/utils/: config.py  logging.py  mcp_tools.py  models.py
