[project]
name = "agents-patterns-examples"
version = "0.1.0"
description = "Multi-agent patterns examples using SEC EDGAR and FRED MCP servers with Strands Agents"
requires-python = ">=3.11"
dependencies = [
    "strands-agents>=1.9.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "edgartools>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["examples"]
